# nexus-plugin-template

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  migrate-plugin.sh  nexus.manifest.json  setup-plugin.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml  security.yml  verify.yml
backend/: .env.example  package.json
backend/src/: index.ts
docs/: CLAUDE_PROMPT.md  api-reference.md  deployment.md  getting-started.md  mcp-integration.md  security-guidelines.md
docs/api-reference/: endpoints.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
frontend/: .env.example  next.config.js  package.json  tailwind.config.ts
frontend/app/: AppBridgeProvider.tsx  BrandingProvider.tsx  EmbeddedLayoutWrapper.tsx  ThemeInitializer.tsx  globals.css  layout.tsx
frontend/components/: ChatProvider.tsx  PageContextBridge.tsx  PluginWSProvider.tsx
frontend/hooks/: useEmbedded.ts  useJobWatcher.ts  usePageContext.ts  useThemeClasses.ts  useWebSocket.ts
frontend/lib/: api-config.ts  auth-fetch.ts  i18n-stub.ts  nexus-app-bridge.ts
frontend/stores/: branding-store.ts  dashboard-store.ts  floating-terminal-store.ts  plugin-ws-store.ts  (+2 more)
k8s/: deployment.yaml  service.yaml
templates/python/: README.md  nexus.manifest.json  pyproject.toml
templates/python/src/: __init__.py  handlers.py  main.py  schemas.py
templates/python/tests/: __init__.py  test_handlers.py  test_schemas.py
(+82 files in other folders)
